update license and readme file

--- a/README
+++ b/README
@@ -1,13 +1,12 @@
 Flowmediaserver
 ===============
 
-Introduction goes here.
+流媒体服务器接口代码.
 
 
 Example
 =======
 
-Example goes here.
-
+... ...
 
 Copyright (c) 2011 [name of plugin creator], released under the MIT license
