--- a/README
+++ b/README
@@ -9,4 +9,4 @@ Example
 
 ... ...
 
-Copyright (c) 2011 [name of plugin creator], released under the MIT license
+Copyright (c) 2011 [hexudong hexudong08@gmail.com], released under the MIT license
